# data2ipfs

./: .gitignore  README.md  pyproject.toml
ADCP/: met_203_vmadcp.py
BACARDI/: bacardi.py
DShip/: dship.py
GNSS_IWV/: METEOR_GNSS_IWV.py
ISAR_SST/: isar_sst.py
LICHT/: licht.py
MAESTRO/: convert_maestro.py
MRR/: mrr.py
SEA-POL/: get_data.sh  sea_pol.py
SMART/: smart.py
SeaSnake/: seasnake.py
Sunphotometer/: aeronet.py
VELOX/: description.txt  velox.py
WindLidar-Abacus/: windlidar_abacus.py
bahamas/: bahamas.py
bahamas_ql/: bahamas_ql.py
ceilometer/: ceilometer.py
cloudcamera/: cloudcamera_videos.py
cloudnet/: cloudnet.py
ctd/: ctd.py
disdrometer/: disdrometer.py  parsivel2.py
hatpro/: hatpro.py  hatpro_ipfs.py
omega_seviri/: omega_seviri.py
position_attitude/: bahamas2ipfs.py  position_whole_campaign.py
rain_gauge/: rain_gauge.py
thermosalinograph/: thermosalinograph.py
x-band/: x-band.py
